--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
 <head>
     <title>PSSharp</title>
-    <!-- <base href="https://stroniax.github.io/"> -->
 
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" href="assets/pssharp-colored.svg" type="image/svg" />
 
     <meta charset="UTF-8">
     <meta name="keywords" content="PSSharp,PowerShell,pwsh,github,open source">
