--- a/index.html
+++ b/index.html
@@ -16,111 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="scripts/main/dark-mode.js"></script>
-    <!-- <script src="scripts/main/nav.js"></script> -->
-    <script>
-        function toggleDarkMode() {
-            const isDarkMode = document.body.classList.contains('dark');
-
-            if (isDarkMode) {
-                localStorage.setItem('dark-mode', 'false');
-                document.body.classList.remove('dark');
-                document.body.classList.add('light');
-            }
-            else {
-                localStorage.setItem('dark-mode', 'true');
-                document.body.classList.remove('light');
-                document.body.classList.add('dark');
-            }
-        }
-
-        function showSettings() {
-            const settingsElement = document.createElement('div');
-            settingsElement.id = 'backdrop';
-            settingsElement.innerHTML = `
-                <div id="webapp-settings-modal">
-                    <div class="flex-row justify-between">
-                        <h3 class="text-2x">Settings</h3>
-                            
-                        <button class="button-rounded bg-burgundy text-2x button-events" style="width: 2.5rem; height: 2.5rem;" onclick="closeSettings()">
-                            X
-                        </button>
-                    </div>
-
-                    <div class="flex-row">
-
-                        <button onclick="toggleDarkMode()">
-                            Toggle Dark Mode
-                        </button>
-                    </div>
-                </div>
-            `;
-            document.body.appendChild(settingsElement);
-        }
-
-        function closeSettings() {
-            document.getElementById('backdrop').remove();
-        }
-
-        document.addEventListener('click', (event) => {
-            if (event.target.id === 'backdrop') {
-                document.body.removeChild(event.target);
-            }
-        });
-    </script>
-    <script>
-        function copyCodeBlock() {
-            const clip = navigator.clipboard;
-            const items = [
-                new ClipboardItem({
-                    'text/plain': new Blob([this.innerText], { type: 'text/plain' }),
-                    'text/html': new Blob([this.innerHTML], { type: 'text/html' })
-                }),
-            ];
-
-            clip.write(items)
-                .then(() => {
-                    const copiedElement = document.createElement('p');
-                    copiedElement.classList.add('alert-text');
-                    copiedElement.innerText = 'Copied!';
-                    alertContainer.appendChild(copiedElement);
-                    setTimeout(() => {
-                        copiedElement.classList.add('animate-fade-out');
-                        setTimeout(() => {
-                            copiedElement.remove();
-                        }, 1000);
-                    }, 2000);
-                })
-                .catch((e) => console.error('failed to set clipboard', e));
-
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const codeBlocks = [
-                ...document.getElementsByClassName('code-block'),
-                ...document.getElementsByClassName('code-inline'),
-            ];
-            for (const codeBlock of codeBlocks) {
-                codeBlock.classList.add('cursor-pointer');
-                codeBlock.addEventListener('click', copyCodeBlock);
-            }
-        });
-
-        let alertContainer;
-
-        function buildAlertContainer() {
-            alertContainer = document.createElement('div');
-            alertContainer.id = 'alert-container';
-            document.body.appendChild(alertContainer);
-        }
-
-        window.addEventListener('load', buildAlertContainer);
-
-        document.addEventListener('click', (event) => {
-            if (event.target.classList.contains('alert-text')) {
-                event.target.remove();
-            }
-        });
-    </script>
+    <script src="scripts/main/settings-button.js"></script>
+    <script src="scripts/main/copy-codeblock.js"></script>
 
 <body class="layout-main">
     <div id="nav">[NAV]</div>
