cleanup dark mode scripts

--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
     <div id="nav">[NAV]</div>
 
     <h1 class="text-2x page-header text-nowrap">
-        <a href="index.html">PSSharp</a>
-        <span class="cursor-pointer" onclick="showSettings()" style="width: 2rem; display: inline-flex;">
+        <a href="">PSSharp</a>
+        <span class="cursor-pointer" onclick="openSettings()" style="width: 2rem; display: inline-flex;">
             &gt;
             <span class="text-cursor-blink">_</span>
         </span>
     </h1>
 
     <div class="page-content">
-        <pre class="code-block">
-This is a block of PowerShell-style code.
-    </pre>
+        <pre class="code-block">This is a block of PowerShell-style code.</pre>
 
         <p>
             This is a paragraph of text with an <span class="code-inline">inline code block</span>.
