--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="scripts/main/dark-mode.js"></script>
-    <script src="scripts/main/settings-button.js"></script>
+    <script src="scripts/main/settings.js"></script>
     <script src="scripts/main/copy-codeblock.js"></script>
 
 <body class="layout-main">
