add some content

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <script src="scripts/main/dark-mode.js"></script>
     <script src="scripts/main/settings.js"></script>
     <script src="scripts/main/copy-codeblock.js"></script>
+    <script src="scripts/main/nav.js"></script>
 
 <body class="layout-main">
-    <div id="nav">[NAV]</div>
+    <nav id="nav"></nav>
 
-    <h1 class="text-2x page-header text-nowrap">
+    <h1 class="text-4x page-header text-nowrap">
         <a href="">PSSharp</a>
         <span class="cursor-pointer" onclick="openSettings()" style="width: 2rem; display: inline-flex;">
             &gt;
