--- a/swim/sets/index.html
+++ b/swim/sets/index.html
@@ -22,6 +22,9 @@
         <li>
             <a href="swim/sets/2023-11-07.html">2023-11-07</a>
         </li>
+        <li>
+            <a href="swim/sets/2023-11-08.html">2023-11-08</a>
+        </li>
     </ol>
 
 </body>
