--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
     <script src="scripts/main/settings.js"></script>
     <script src="scripts/main/copy-codeblock.js"></script>
     <script src="scripts/main/nav.js"></script>
-    <!-- <script type="module">
-        import init, { greet } from "http://localhost:8080/pssharp-fe/pkg/pssharp_fe.js";
-        init().then(() => {
-            greet("WebAssembly");
-        });
-    </script> -->
+    <script src="index.js" type="module"></script>
 
 <body class="layout-main">
     <nav id="nav"></nav>
