migrate dark mode and settings code to rust

--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
     <meta name="author" content="Caleb Frederickson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="scripts/main/dark-mode.js"></script>
+    <script src="index.js" type="module"></script>
     <script src="scripts/main/settings.js"></script>
     <script src="scripts/main/copy-codeblock.js"></script>
     <script src="scripts/main/nav.js"></script>
-    <script src="index.js" type="module"></script>
 
 <body class="layout-main">
     <nav id="nav"></nav>
 
     <h1 class="text-4x page-header text-nowrap">
         <a href="">PSSharp</a>
-        <span class="cursor-pointer" onclick="openSettings()" style="width: 2rem; display: inline-flex;">
+        <span class="cursor-pointer" id="settings-trigger" style="width: 2rem; display: inline-flex;">
             &gt;
             <span class="text-cursor-blink">_</span>
         </span>
