migrated tooltip from js to rust

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="index.js" type="module"></script>
-    <script src="scripts/main/settings.js"></script>
     <script src="scripts/main/copy-codeblock.js"></script>
     <script src="scripts/main/nav.js"></script>
 
@@ -24,7 +23,7 @@
     <nav id="nav"></nav>
 
     <h1 class="text-4x page-header text-nowrap">
-        <a href="">PSSharp</a>
+        <a href="" tooltip="Home">PSSharp</a>
         <span class="cursor-pointer" id="settings-trigger" style="width: 2rem; display: inline-flex;">
             &gt;
             <span class="text-cursor-blink">_</span>
